prepare project for vercel deploy
