# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./harvests";
 export * from "./storage";
 export * from "./transport";
 export * from "./orders";
+export * from "./tracking";
